--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Theme.SummaryTube" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryDark">@color/purple_700</item>
-        <item name="colorAccent">@color/teal_200</item>
-        
-        <item name="android:statusBarColor">@color/purple_700</item>
-        <item name="android:windowLightStatusBar">false</item>
+<resources>
+    <style name="Theme.SummaryTube" parent="Theme.Material3.Dark.NoActionBar">
+        <item name="colorPrimary">@color/purple_dark</item>
+        <item name="android:statusBarColor">@color/black</item>
     </style>
 </resources>
