--- a/app/src/main/res/layout/widget_layout.xml
+++ b/app/src/main/res/layout/widget_layout.xml
@@ -7,10 +7,19 @@
     android:orientation="horizontal">
 
     <ImageView
+        android:id="@+id/iv_widget_logo"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:src="@drawable/ic_widget"
+        android:layout_marginStart="8dp" />
+
+    <ImageButton
+        android:id="@+id/btn_widget_paste"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:src="@drawable/ic_widget" />
-
+        android:src="@drawable/ic_paste"
+        android:background="?android:attr/selectableItemBackgroundBorderless" />
+    
     <EditText
         android:id="@+id/et_widget_link"
         android:layout_width="0dp"
@@ -23,7 +32,7 @@
         android:textColor="#FFFFFF" />
 
     <ImageButton
-        android:id="@+id/btn_send_widget"
+        android:id="@+id/btn_widget_send"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/ic_send"
