--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.Material3.Dark" parent="Theme.Material3.Dark.NoActionBar">
+    <style name="Theme.Material3.Dark" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/purple_dark</item>
         <item name="android:statusBarColor">@color/black</item>
         <item name="android:navigationBarColor">@color/black</item>
