--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="purple_dark">#FF8B5CF6</color>
+    <color name="purple_dark">#FF3700B3</color>
+    <color name="gray_dark">#FF1E1E1E</color>
 </resources>
