--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,10 +2,16 @@
 <resources>
     <style name="Theme.Material3.Dark" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/purple_dark</item>
-        <item name="android:statusBarColor">@color/black</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:navigationBarColor">@color/black</item>
         <item name="android:windowBackground">@color/black</item>
-        
+
+        <!-- Adicione esses itens novos para edge-to-edge e translucidez -->
+        <item name="android:windowTranslucentStatus">true</item> <!-- Status bar translúcida -->
+        <item name="android:windowTranslucentNavigation">true</item> <!-- Navigation bar translúcida (opcional, mas ajuda) -->
+        <item name="android:windowNoTitle">true</item> <!-- Confirma sem título extra -->
+        <item name="android:windowActionBar">false</item> <!-- Sem action bar residual -->
+
         <item name="android:forceDarkAllowed">true</item>
     </style>
 </resources>
